fix(cert-manager): values path

--- a/addons/aws/cert-manager-appset.yaml
+++ b/addons/aws/cert-manager-appset.yaml
@@ -31,8 +31,8 @@ spec:
             releaseName: cert-manager
             ignoreMissingValueFiles: true
             valueFiles:
-              - $values/{{metadata.annotations.addons_repo_basepath}}environments/default/{{values.addonChart}}/values.yaml
-              - $values/{{metadata.annotations.addons_repo_basepath}}environments/{{metadata.labels.environment}}/{{values.addonChart}}/values.yaml
+              - '{{metadata.annotations.addons_repo_basepath}}environments/default/{{values.addonChart}}/values.yaml'
+              - '{{metadata.annotations.addons_repo_basepath}}environments/{{metadata.labels.environment}}/{{values.addonChart}}/values.yaml'
             values: |
               installCRDs: true
               serviceAccount:
