fix(cert-manager): generated app name

--- a/addons/aws/cert-manager-appset.yaml
+++ b/addons/aws/cert-manager-appset.yaml
@@ -17,7 +17,7 @@ spec:
               values: ['true']
   template:
     metadata:
-      name: '{{values.addonChart}}'
+      name: addon-{{values.addonChart}}
     spec:
       project: default
       sources:
