--- a/addons/aws/external-dns-appset.yaml
+++ b/addons/aws/external-dns-appset.yaml
@@ -2,7 +2,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: addon-cert-manager
+  name: addon-external-dns
 spec:
   goTemplate: true
   syncPolicy:
@@ -10,10 +10,10 @@ spec:
   generators:
     - clusters:
         values:
-          addonChart: cert-manager
+          addonChart: external-dns
         selector:
           matchExpressions:
-            - key: enable_cert_manager
+            - key: enable_external_dns
               operator: In
               values: ['true']
   template:
@@ -26,8 +26,8 @@ spec:
         #   targetRevision: '{{.metadata.annotations.addons_repo_revision}}'
         #   ref: values
         - chart: '{{.values.addonChart}}'
-          repoURL: https://charts.jetstack.io
-          targetRevision: v1.14.3
+          repoURL: https://kubernetes-sigs.github.io/external-dns
+          targetRevision: 1.14.3
           helm:
             releaseName: '{{.values.addonChart}}'
             ignoreMissingValueFiles: true
@@ -35,14 +35,17 @@ spec:
               - '{{metadata.annotations.addons_repo_basepath}}/environments/default/{{values.addonChart}}/values.yaml'
               - '{{metadata.annotations.addons_repo_basepath}}/environments/{{metadata.labels.environment}}/{{values.addonChart}}/values.yaml'
             valuesObject:
-              installCRDs: true
+              provider: aws
               serviceAccount:
-                name: '{{.metadata.annotations.cert_manager_service_account}}'
+                name: '{{.metadata.annotations.external_dns_service_account}}'
                 annotations:
-                  eks.amazonaws.com/role-arn: {{.metadata.annotations.cert_manager_iam_role_arn}}
+                  eks.amazonaws.com/role-arn: '{{.metadata.annotations.external_dns_iam_role_arn}}'
+              domainFilters: '{{.metadata.annotations.external_dns_domain_filters}}'
+              txtOwnerId: '{{.metadata.annotations.aws_cluster_name}}'
+              policy: '{{default "upsert-only" .metadata.annotations.external_dns_policy}}'
       destination:
-        namespace: '{{.metadata.annotations.cert_manager_namespace}}'
         name: '{{.name}}'
+        namespace: '{{.metadata.annotations.external_dns_namespace}}'
       syncPolicy:
         automated:
           prune: true
