--- a/addons/aws/cert-manager-appset.yaml
+++ b/addons/aws/cert-manager-appset.yaml
@@ -32,14 +32,14 @@ spec:
             releaseName: '{{.values.addonChart}}'
             ignoreMissingValueFiles: true
             valueFiles:
-              - '{{metadata.annotations.addons_repo_basepath}}/environments/default/{{values.addonChart}}/values.yaml'
-              - '{{metadata.annotations.addons_repo_basepath}}/environments/{{metadata.labels.environment}}/{{values.addonChart}}/values.yaml'
+              - '{{.metadata.annotations.addons_repo_basepath}}/environments/default/{{.values.addonChart}}/values.yaml'
+              - '{{.metadata.annotations.addons_repo_basepath}}/environments/{{.metadata.labels.environment}}/{{.values.addonChart}}/values.yaml'
             valuesObject:
               installCRDs: true
               serviceAccount:
                 name: '{{.metadata.annotations.cert_manager_service_account}}'
                 annotations:
-                  eks.amazonaws.com/role-arn: {{.metadata.annotations.cert_manager_iam_role_arn}}
+                  eks.amazonaws.com/role-arn: '{{.metadata.annotations.cert_manager_iam_role_arn}}'
       destination:
         namespace: '{{.metadata.annotations.cert_manager_namespace}}'
         name: '{{.name}}'
