--- a/addons/aws/external-dns-appset.yaml
+++ b/addons/aws/external-dns-appset.yaml
@@ -35,14 +35,11 @@ spec:
               - '{{.metadata.annotations.addons_repo_basepath}}/environments/default/{{.values.addonChart}}/values.yaml'
               - '{{.metadata.annotations.addons_repo_basepath}}/environments/{{.metadata.labels.environment}}/{{.values.addonChart}}/values.yaml'
             valuesObject:
-              provider: aws
-              serviceAccount:
-                name: '{{.metadata.annotations.external_dns_service_account}}'
-                annotations:
-                  eks.amazonaws.com/role-arn: '{{.metadata.annotations.external_dns_iam_role_arn}}'
-              domainFilters: '{{.metadata.annotations.external_dns_domain_filters}}'
+              # serviceAccount:
+              #   name: '{{.metadata.annotations.external_dns_service_account}}'
+              #   annotations:
+              #     eks.amazonaws.com/role-arn: '{{.metadata.annotations.external_dns_iam_role_arn}}'
               txtOwnerId: '{{.metadata.annotations.aws_cluster_name}}'
-              policy: '{{default "upsert-only" .metadata.annotations.external_dns_policy}}'
       destination:
         name: '{{.name}}'
         namespace: '{{.metadata.annotations.external_dns_namespace}}'
