--- a/addons/aws/aws-load-balancer-controller-appset.yaml
+++ b/addons/aws/aws-load-balancer-controller-appset.yaml
@@ -2,7 +2,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: addon-cert-manager
+  name: addon-aws-load-balancer-controller
 spec:
   goTemplate: true
   syncPolicy:
@@ -10,10 +10,10 @@ spec:
   generators:
     - clusters:
         values:
-          addonChart: cert-manager
+          addonChart: aws-load-balancer-controller
         selector:
           matchExpressions:
-            - key: enable_cert_manager
+            - key: enable_aws-load-balancer-controller
               operator: In
               values: ['true']
   template:
@@ -26,8 +26,8 @@ spec:
         #   targetRevision: '{{.metadata.annotations.addons_repo_revision}}'
         #   ref: values
         - chart: '{{.values.addonChart}}'
-          repoURL: https://charts.jetstack.io
-          targetRevision: v1.14.3
+          repoURL: https://aws.github.io/eks-charts
+          targetRevision: 1.7.1
           helm:
             releaseName: '{{.values.addonChart}}'
             ignoreMissingValueFiles: true
@@ -35,17 +35,28 @@ spec:
               - '{{.metadata.annotations.addons_repo_basepath}}/environments/default/{{.values.addonChart}}/values.yaml'
               - '{{.metadata.annotations.addons_repo_basepath}}/environments/{{.metadata.labels.environment}}/{{.values.addonChart}}/values.yaml'
             valuesObject:
-              installCRDs: true
+              vpcId: '{{.metadata.annotations.aws_vpc_id}}'
+              clusterName: '{{.metadata.annotations.aws_cluster_name}}'
               serviceAccount:
-                name: '{{.metadata.annotations.cert_manager_service_account}}'
+                name: '{{.metadata.annotations.aws_load_balancer_controller_service_account}}'
                 annotations:
-                  eks.amazonaws.com/role-arn: '{{.metadata.annotations.cert_manager_iam_role_arn}}'
+                  eks.amazonaws.com/role-arn: '{{.metadata.annotations.aws_load_balancer_controller_iam_role_arn}}'
       destination:
         name: '{{.name}}'
-        namespace: '{{.metadata.annotations.cert_manager_namespace}}'
+        namespace: '{{.metadata.annotations.aws-load-balancer-controller_namespace}}'
       syncPolicy:
         automated:
           prune: true
         syncOptions:
           - CreateNamespace=true
           - ServerSideApply=true  # Big CRDs
+      ignoreDifferences:
+        - kind: Secret
+          name: aws-load-balancer-tls
+          jsonPointers: [/data]
+        - group: admissionregistration.k8s.io
+          kind: MutatingWebhookConfiguration
+          jqPathExpressions: ['.webhooks[].clientConfig.caBundle']
+        - group: admissionregistration.k8s.io
+          kind: ValidatingWebhookConfiguration
+          jqPathExpressions: ['.webhooks[].clientConfig.caBundle']
