--- a/addons/aws/ingress-nginx-appset.yaml
+++ b/addons/aws/ingress-nginx-appset.yaml
@@ -2,7 +2,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: addon-cert-manager
+  name: addons-ingress-nginx
 spec:
   goTemplate: true
   syncPolicy:
@@ -10,10 +10,10 @@ spec:
   generators:
     - clusters:
         values:
-          addonChart: cert-manager
+          addonChart: ingress-nginx
         selector:
           matchExpressions:
-            - key: enable_cert_manager
+            - key: enable_ingress_nginx
               operator: In
               values: ['true']
   template:
@@ -26,23 +26,17 @@ spec:
         #   targetRevision: '{{.metadata.annotations.addons_repo_revision}}'
         #   ref: values
         - chart: '{{.values.addonChart}}'
-          repoURL: https://charts.jetstack.io
-          targetRevision: v1.14.3
+          repoURL: https://kubernetes.github.io/ingress-nginx
+          targetRevision: 4.10.0
           helm:
             releaseName: '{{.values.addonChart}}'
             ignoreMissingValueFiles: true
             valueFiles:
               - '{{.metadata.annotations.addons_repo_basepath}}/environments/default/{{.values.addonChart}}/values.yaml'
               - '{{.metadata.annotations.addons_repo_basepath}}/environments/{{.metadata.labels.environment}}/{{.values.addonChart}}/values.yaml'
-            valuesObject:
-              installCRDs: true
-              serviceAccount:
-                name: '{{.metadata.annotations.cert_manager_service_account}}'
-                annotations:
-                  eks.amazonaws.com/role-arn: '{{.metadata.annotations.cert_manager_iam_role_arn}}'
       destination:
         name: '{{.name}}'
-        namespace: '{{.metadata.annotations.cert_manager_namespace}}'
+        namespace: '{{.values.addonChart}}'
       syncPolicy:
         automated:
           prune: true
