--- a/addons/extra/db-operator-appset.yaml
+++ b/addons/extra/db-operator-appset.yaml
@@ -13,15 +13,14 @@ spec:
           - clusters:
               values:
                 addonChart: db-operator
-          - list:
-              elements:
-                - values:
-                    enabled: true  # enable or disable the addon
+                enable_db_operator: true
+        selector:
+          matchLabels:
+            - enable_db_operator: true
   template:
     metadata:
       name: addon-{{.values.addonChart}}
     spec:
-      {{- if eq .values.enabled "true" }}
       project: default
       sources:
         # - repoURL: '{{.metadata.annotations.addons_repo_url}}'
@@ -45,4 +44,3 @@ spec:
         syncOptions:
           - CreateNamespace=true
           - ServerSideApply=true  # Big CRDs
-      {{- end }}
