--- a/addons/extra/db-operator-appset.yaml
+++ b/addons/extra/db-operator-appset.yaml
@@ -13,10 +13,10 @@ spec:
           - clusters:
               values:
                 addonChart: db-operator
-                enable_db_operator: true
+                enable_db_operator: "true"
         selector:
           matchLabels:
-            - enable_db_operator: true
+            - enable_db_operator: "true"
   template:
     metadata:
       name: addon-{{.values.addonChart}}
