Test db-operator enable/disable switch

--- a/addons/extra/db-operator-appset.yaml
+++ b/addons/extra/db-operator-appset.yaml
@@ -14,7 +14,7 @@ spec:
           enable_db_operator: "true"
       selector:
         matchLabels:
-          - enable_db_operator: "true"
+          enable_db_operator: "true"
   template:
     metadata:
       name: addon-{{.values.addonChart}}
