Test db-operator enable/disable switch

--- a/addons/extra/db-operator-appset.yaml
+++ b/addons/extra/db-operator-appset.yaml
@@ -11,10 +11,10 @@ spec:
     - clusters:
         values:
           addonChart: db-operator
-          enable_db_operator: "true"
-      # selector:
-      #   matchLabels:
-      #     "values.enable_db_operator": "true"
+          enable_db_operator: true
+      selector:
+        matchLabels:
+          "values.enable_db_operator": true
   template:
     metadata:
       name: extra-{{.values.addonChart}}
