Test db-operator enable/disable switch

--- a/addons/extra/db-operator-appset.yaml
+++ b/addons/extra/db-operator-appset.yaml
@@ -9,12 +9,12 @@ spec:
     preserveResourcesOnDeletion: true
   generators:
     - clusters:
+        enable_db_operator: "true"
         values:
           addonChart: db-operator
-          enable_db_operator: true
       selector:
         matchLabels:
-          "values.enable_db_operator": true
+          enable_db_operator: "true"
   template:
     metadata:
       name: extra-{{.values.addonChart}}
