Test db-operator enable/disable switch

--- a/addons/extra/db-operator-appset.yaml
+++ b/addons/extra/db-operator-appset.yaml
@@ -10,7 +10,7 @@ spec:
   generators:
     - matrix:
         generators:
-          - clusters:
+          - clusters: {}
           - list:
               elements:
                 - enable_db_operator: "true"
