--- a/addons/aws/argocd-appset.yaml
+++ b/addons/aws/argocd-appset.yaml
@@ -23,9 +23,9 @@ spec:
     spec:
       project: default
       sources:
-        # - repoURL: '{{.metadata.annotations.addons_repo_url}}'
-        #   targetRevision: '{{.metadata.annotations.addons_repo_revision}}'
-        #   ref: values
+        - repoURL: '{{.metadata.annotations.addons_repo_url}}'
+          targetRevision: '{{.metadata.annotations.addons_repo_revision}}'
+          ref: values
         - chart: '{{.values.addonChart}}'
           repoURL: https://argoproj.github.io/argo-helm
           targetRevision: 7.9.1
@@ -33,8 +33,8 @@ spec:
             releaseName: '{{.values.releaseName}}'
             ignoreMissingValueFiles: true
             valueFiles:
-              - '{{.metadata.annotations.addons_repo_basepath}}/environments/default/{{.values.releaseName}}/values.yaml'
-              - '{{.metadata.annotations.addons_repo_basepath}}/environments/{{.metadata.labels.environment}}/{{.values.releaseName}}/values.yaml'
+              - $values/{{.metadata.annotations.addons_repo_basepath}}environments/default/{{.values.releaseName}}/values.yaml
+              - $values/{{.metadata.annotations.addons_repo_basepath}}environments/{{.metadata.labels.environment}}/{{.values.releaseName}}/values.yaml
       destination:
         name: '{{.name}}'
         namespace: '{{.values.releaseName}}'
