--- a/addons/aws/aws-load-balancer-controller-appset.yaml
+++ b/addons/aws/aws-load-balancer-controller-appset.yaml
@@ -22,9 +22,9 @@ spec:
     spec:
       project: default
       sources:
-        # - repoURL: '{{.metadata.annotations.addons_repo_url}}'
-        #   targetRevision: '{{.metadata.annotations.addons_repo_revision}}'
-        #   ref: values
+        - repoURL: '{{.metadata.annotations.addons_repo_url}}'
+          targetRevision: '{{.metadata.annotations.addons_repo_revision}}'
+          ref: values
         - chart: '{{.values.addonChart}}'
           repoURL: https://aws.github.io/eks-charts
           targetRevision: 1.8.2
@@ -32,8 +32,8 @@ spec:
             releaseName: '{{.values.addonChart}}'
             ignoreMissingValueFiles: true
             valueFiles:
-              - '{{.metadata.annotations.addons_repo_basepath}}/environments/default/{{.values.addonChart}}/values.yaml'
-              - '{{.metadata.annotations.addons_repo_basepath}}/environments/{{.metadata.labels.environment}}/{{.values.addonChart}}/values.yaml'
+              - $values/{{.metadata.annotations.addons_repo_basepath}}environments/default/{{.values.addonChart}}/values.yaml
+              - $values/{{.metadata.annotations.addons_repo_basepath}}environments/{{.metadata.labels.environment}}/{{.values.addonChart}}/values.yaml
             valuesObject:
               vpcId: '{{.metadata.annotations.aws_vpc_id}}'
               clusterName: '{{.metadata.annotations.aws_cluster_name}}'
