--- a/addons/aws/external-dns-appset.yaml
+++ b/addons/aws/external-dns-appset.yaml
@@ -22,9 +22,9 @@ spec:
     spec:
       project: default
       sources:
-        # - repoURL: '{{.metadata.annotations.addons_repo_url}}'
-        #   targetRevision: '{{.metadata.annotations.addons_repo_revision}}'
-        #   ref: values
+        - repoURL: '{{.metadata.annotations.addons_repo_url}}'
+          targetRevision: '{{.metadata.annotations.addons_repo_revision}}'
+          ref: values
         - chart: '{{.values.addonChart}}'
           repoURL: https://kubernetes-sigs.github.io/external-dns
           targetRevision: 1.17.0
@@ -32,8 +32,8 @@ spec:
             releaseName: '{{.values.addonChart}}'
             ignoreMissingValueFiles: true
             valueFiles:
-              - '{{.metadata.annotations.addons_repo_basepath}}/environments/default/{{.values.addonChart}}/values.yaml'
-              - '{{.metadata.annotations.addons_repo_basepath}}/environments/{{.metadata.labels.environment}}/{{.values.addonChart}}/values.yaml'
+              - $values/{{.metadata.annotations.addons_repo_basepath}}environments/default/{{.values.addonChart}}/values.yaml
+              - $values/{{.metadata.annotations.addons_repo_basepath}}environments/{{.metadata.labels.environment}}/{{.values.addonChart}}/values.yaml
             valuesObject:
               # serviceAccount:
               #   name: '{{.metadata.annotations.external_dns_service_account}}'
