fix: disable servicemonitor creation

--- a/environments/default/external-dns/values.yaml
+++ b/environments/default/external-dns/values.yaml
@@ -12,7 +12,7 @@ policy: sync
 #         key: token
 
 serviceMonitor:
-  enabled: true
+  enabled: false
   namespace: monitoring
 
 txtPrefix: xdns-
