--- a/environments/default/ingress-nginx/values.yaml
+++ b/environments/default/ingress-nginx/values.yaml
@@ -63,5 +63,5 @@ controller:
   metrics:
     enabled: true
     serviceMonitor:
-      enabled: true
+      enabled: false
       namespace: monitoring
