test fix matrix generator

--- a/apps/crai-fidelity-manager-backend-appset.yaml
+++ b/apps/crai-fidelity-manager-backend-appset.yaml
@@ -44,8 +44,8 @@ spec:
               - $values/{{.metadata.annotations.addons_repo_basepath}}environments/{{.environment}}/{{.values.addonChart}}/values.yaml
       destination:
         name: '{{.name}}'
-        # namespace: '{{.values.addonChart}}'
-        namespace: fidelity-manager-backend
+        namespace: '{{.values.addonChart}}'
+        # namespace: fidelity-manager-backend
       syncPolicy:
         automated:
           prune: true
