--- a/apps/crai-fidelity-manager-backend-appset.yaml
+++ b/apps/crai-fidelity-manager-backend-appset.yaml
@@ -20,7 +20,6 @@ spec:
                   enable_fidelity_manager_backend: "true"
                 - environment: prod
                   enable_fidelity_manager_backend: "false"
-
       selector:
         matchLabels:
           enable_fidelity_manager_backend: "true"
@@ -33,8 +32,9 @@ spec:
         - repoURL: '{{.metadata.annotations.addons_repo_url}}'
           targetRevision: '{{.metadata.annotations.addons_repo_revision}}'
           ref: values
-        - chart: '{{.values.addonChart}}'
+        - # chart: '{{.values.addonChart}}'
           repoURL: https://github.com/Quentral/crai-fidelity-manager-backend-chart
+          path: ./
           targetRevision: HEAD
           helm:
             releaseName: '{{.values.addonChart}}'
