--- a/addons/aws/external-dns-appset.yaml
+++ b/addons/aws/external-dns-appset.yaml
@@ -40,12 +40,26 @@ spec:
               #   annotations:
               #     eks.amazonaws.com/role-arn: '{{.metadata.annotations.external_dns_iam_role_arn}}'
               txtOwnerId: '{{.metadata.annotations.aws_cluster_name}}'
+        - chart: k8s-resources
+          repoURL: https://raw.githubusercontent.com/deliveryhero/helm-charts/refs/heads/master/
+          targetRevision: 0.8.1
+          helm:
+            ignoreMissingValueFiles: true
+            # valueFiles:
+            #   - $values/{{.metadata.annotations.addons_repo_basepath}}environments/default/{{.values.addonChart}}/resources.yaml
+            #   - $values/{{.metadata.annotations.addons_repo_basepath}}environments/{{.metadata.labels.environment}}/{{.values.addonChart}}/resources.yaml
+            valuesObject:
+              Secrets:
+                - name: cloudflare-api-token
+                  keys:
+                    # token: '{{.metadata.annotations.cloudflare_api_token}}'
+                    token: ZFpzalpKV1hWbUVQcGFmbjFTd3YwM0pHX09zdWFJUXpPWTVobDFWdQ==
       destination:
         name: '{{.name}}'
         namespace: '{{.metadata.annotations.external_dns_namespace}}'
       syncPolicy:
-        automated:
-          prune: true
+        # automated:
+        #   prune: true
         syncOptions:
           - CreateNamespace=true
           - ServerSideApply=true  # Big CRDs
