--- a/addons/aws/external-dns-appset.yaml
+++ b/addons/aws/external-dns-appset.yaml
@@ -40,9 +40,11 @@ spec:
               #   annotations:
               #     eks.amazonaws.com/role-arn: '{{.metadata.annotations.external_dns_iam_role_arn}}'
               txtOwnerId: '{{.metadata.annotations.aws_cluster_name}}'
-        - chart: k8s-resources
-          repoURL: https://raw.githubusercontent.com/deliveryhero/helm-charts/refs/heads/master/
-          targetRevision: 0.8.1
+        - # chart: k8s-resources
+          # repoURL: https://raw.githubusercontent.com/deliveryhero/helm-charts/refs/heads/master
+          chart: hello-world
+          repoURL: https://helm.github.io/examples
+          targetRevision: 0.1.0
           helm:
             ignoreMissingValueFiles: true
             # valueFiles:
