test deliveryhero helm source

--- a/addons/aws/external-dns-appset.yaml
+++ b/addons/aws/external-dns-appset.yaml
@@ -40,10 +40,10 @@ spec:
               #   annotations:
               #     eks.amazonaws.com/role-arn: '{{.metadata.annotations.external_dns_iam_role_arn}}'
               txtOwnerId: '{{.metadata.annotations.aws_cluster_name}}'
-        - # chart: k8s-resources
-          # repoURL: https://raw.githubusercontent.com/deliveryhero/helm-charts/refs/heads/master
-          chart: hello-world
-          repoURL: https://helm.github.io/examples
+        - chart: k8s-resources
+          repoURL: https://raw.githubusercontent.com/deliveryhero/helm-charts/refs/heads/master
+          # chart: hello-world
+          # repoURL: https://helm.github.io/examples
           targetRevision: 0.1.0
           helm:
             ignoreMissingValueFiles: true
