--- a/addons/aws/external-dns-appset.yaml
+++ b/addons/aws/external-dns-appset.yaml
@@ -41,7 +41,7 @@ spec:
               #     eks.amazonaws.com/role-arn: '{{.metadata.annotations.external_dns_iam_role_arn}}'
               txtOwnerId: '{{.metadata.annotations.aws_cluster_name}}'
         - chart: k8s-resources
-          repoURL: https://raw.githubusercontent.com/deliveryhero/helm-charts/refs/heads/master
+          repoURL: oci://ghcr.io/deliveryhero/helm-charts
           # chart: hello-world
           # repoURL: https://helm.github.io/examples
           targetRevision: 0.8.1
