ops(external-dns): safer conf for tests

--- a/environments/default/external-dns/values.yaml
+++ b/environments/default/external-dns/values.yaml
@@ -2,7 +2,8 @@ provider:
   name: cloudflare
 domainFilters:
   - quentrix.com
-policy: sync
+#policy: sync
+policy: upsert-only  # safer
 
 env:
   - name: CF_API_TOKEN
