--- a/addons/aws/external-dns-appset.yaml
+++ b/addons/aws/external-dns-appset.yaml
@@ -60,8 +60,8 @@ spec:
         name: '{{.name}}'
         namespace: '{{.metadata.annotations.external_dns_namespace}}'
       syncPolicy:
-        # automated:
-        #   prune: true
+        automated:
+          prune: true
         syncOptions:
           - CreateNamespace=true
           - ServerSideApply=true  # Big CRDs
