--- a/addons/aws/argocd-appset.yaml
+++ b/addons/aws/argocd-appset.yaml
@@ -40,7 +40,7 @@ spec:
         namespace: '{{.values.releaseName}}'
       syncPolicy:
         automated:
-          prune: true
+          # prune: true
         syncOptions:
           - CreateNamespace=true
           - ServerSideApply=true  # Big CRDs
