--- a/addons/ack/ack-s3-appset.yaml
+++ b/addons/ack/ack-s3-appset.yaml
@@ -45,7 +45,7 @@ spec:
                   eks.amazonaws.com/role-arn: '{{metadata.annotations.ack_s3_iam_role_arn}}'
       destination:
         name: '{{.name}}'
-        namespace: '{{metadata.annotations.ack_s3_namespace}}'
+        namespace: '{{.metadata.annotations.ack_s3_namespace}}'
       syncPolicy:
         automated:
           prune: true
