fix(ack-s3): generate fancier names

--- a/addons/ack/ack-s3-appset.yaml
+++ b/addons/ack/ack-s3-appset.yaml
@@ -38,7 +38,7 @@ spec:
             valuesObject:
               aws:
                 region: '{{.values.releaseName}}'
-              nameOverride: '{{values.addonChartRepositoryNamespace}}'
+              nameOverride: '{{.values.releaseName}}'
               serviceAccount:
                 name: '{{.metadata.annotations.ack_s3_service_account}}'
                 annotations:
