--- a/addons/ack/ack-rds-appset.yaml
+++ b/addons/ack/ack-rds-appset.yaml
@@ -52,3 +52,10 @@ spec:
         syncOptions:
           - CreateNamespace=true
           - ServerSideApply=true  # Big CRDs
+      ignoreDifferences:
+        - group: apiextensions.k8s.io
+          kind: CustomResourceDefinition
+          name: adoptedresources.services.k8s.aws
+        - group: apiextensions.k8s.io
+          kind: CustomResourceDefinition
+          name: fieldexports.services.k8s.aws
