--- a/addons/ack/ack-rds-appset.yaml
+++ b/addons/ack/ack-rds-appset.yaml
@@ -56,6 +56,12 @@ spec:
         - group: apiextensions.k8s.io
           kind: CustomResourceDefinition
           name: adoptedresources.services.k8s.aws
+          jsonPointers:
+            - /spec
+            - /metadata
         - group: apiextensions.k8s.io
           kind: CustomResourceDefinition
           name: fieldexports.services.k8s.aws
+          jsonPointers:
+            - /spec
+            - /metadata
