--- a/addons/ack/ack-iam-appset.yaml
+++ b/addons/ack/ack-iam-appset.yaml
@@ -16,7 +16,7 @@ spec:
           matchExpressions:
             - key: enable_ack_iam
               operator: In
-              values: ['trueX']
+              values: ['true']
   template:
     metadata:
       name: addon-{{.values.releaseName}}
